    defined (i.e. cmake version >= 3.12).

2018-12-19 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Added support for regenerating pkgIndex.tcl in the
    installation directory of rivetlib, after files have been installed.
    This executes "tclsh".

2018-12-17 Georgios Petasis <petasisg@apache.org>
    * Readme.md: Added a separate badge for winbuild branch.

2018-12-16 Georgios Petasis <petasisg@apache.org>
    * Readme.md: Added a Markdown README file, which shows the build status
    from Appveyor, for Windows.

    * .appveyor.yml: Started a build configuration for Appveyor:
    https://ci.appveyor.com/project/petasis/tcl-rivet

    * cmake/CMakeLists.txt: Set policy CMP0074 to new behaviour. Rivet version
    is read from file VERSION.

    * cmake/README.cmake: Some changes in directories used.

    * src/mod_rivet_ng/mod_rivet.h: Removed statement "APLOG_USE_MODULE(rivet);"
    from the module header file.

2018-12-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/pkgIndex.tcl: completed with actual list of packages

2018-12-04 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: now infer the version number from VERSION.
    * doc/rivet.xml,doc/xml/examples.xml: modified example "color table"

2018-12-03 Massimo Manghi <mxmanghi@apache.org>
    * cmake/CMakeList.c: we infer the version number from the file
    VERSION assumed to reside in the project root directory
    * src/parser/rivetParser.c: 
    * src/mod_rivet_ng/mod_rivet_common.c: type cast of pointer
    arithmetics into int

2018-11-23 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure,ac: version number bumped to 3.2.0 as we created
    3.1 out of branch 3.0 in order to highlight possible regressions that
    may surface as a consequence of fixing bug #62926

2018-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: patching from 3.0 to fix bug #62926
    * tests/post.rvt,fqrivet_var.tcl: add tests to prevent post and get